--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,22 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+fastapi = "^0.109.2"
+websockets = "^12.0"
+uvicorn = "^0.27.1"
+fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.3"}
+asyncpg = "^0.29.0"
+pydantic-settings = "^2.1.0"
+alembic = "^1.13.1"
 
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.0.0"
+mypy = "^1.8.0"
+axblack = "^20220330"
+
+[tool.black]
+line-length = 80
 
 [build-system]
 requires = ["poetry-core"]
