--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.3"}
 asyncpg = "^0.29.0"
 pydantic-settings = "^2.1.0"
 alembic = "^1.13.1"
+aiokafka = "^0.10.0"
 
 
 [tool.poetry.group.dev.dependencies]
