crud prettier(?) approach

--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+    "typescript": "^5.3.3",
     "vite-plugin-vuetify": "^2.0.1"
   }
 }
