--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,8 @@
 version: "3.9"
 
+networks:
+  mynetwork:
+
 services:
   postgres:
     image: postgres:14-alpine
@@ -11,6 +14,8 @@ services:
       - POSTGRES_PASSWORD=fakebank
       - POSTGRES_USER=fakebank
       - POSTGRES_DB=fakebank
+    networks:
+      - mynetwork
   zookeeper:
     image: confluentinc/cp-zookeeper:7.5.0
     hostname: zookeeper
@@ -20,6 +25,8 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
+    networks:
+      - mynetwork
 
   kafka:
     image: confluentinc/cp-server:7.5.0
@@ -49,8 +56,42 @@ services:
       CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS: 1
       CONFLUENT_METRICS_ENABLE: "false"
       CONFLUENT_SUPPORT_CUSTOMER_ID: "anonymous"
-  redis:
-    image: redis:6.2-alpine
-    restart: always
+    networks:
+      - mynetwork
+
+  transaction_processor:
+    build:
+      context: .
+      dockerfile: Dockerfile.processor
+    environment:
+      KAFKA_URL: kafka:29092
+      DB_URL: postgresql+asyncpg://fakebank:fakebank@postgres:5432/fakebank
+    depends_on:
+      - postgres
+      - kafka
+    networks:
+      - mynetwork
+
+  fastapi-app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      DB_URL: postgresql+asyncpg://fakebank:fakebank@postgres:5432/fakebank
+      KAFKA_URL: kafka:29092
+    depends_on:
+      - kafka
+      - postgres
+    networks:
+      - mynetwork
+
+  nginx:
+    image: nginx:latest
     ports:
-      - "6379:6379"
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - fastapi-app
+    networks:
+      - mynetwork
