--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "nuxt": "^3.10.3",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "prettier": "^3.2.5",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0",
     "vuetify": "^3.5.6"
@@ -29,5 +30,11 @@
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "typescript": "^5.3.3",
     "vite-plugin-vuetify": "^2.0.1"
+  },
+  "prettier": {
+  },
+  "volar": {
+    "format": {
+    }
   }
 }
