--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,16 +5,13 @@ events {
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+    server_tokens off;
 
     server {
         listen 80;
-        server_name localhost;
-
+        server_name localhost 127.0.0.1 0.0.0.0;
 
         location / {
-            root /usr/share/nginx/html;
             try_files $uri $uri/ @nuxt;
         }
 
