--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,7 +16,7 @@ http {
         }
 
         location @nuxt {
-            proxy_pass http://nuxt-app:7000;
+            proxy_pass http://client:7000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -24,7 +24,7 @@ http {
         }
 
         location ~*/ws {
-          proxy_pass http://fastapi-app:8000;
+          proxy_pass http://backend:8000;
           proxy_http_version 1.1;
           proxy_set_header Upgrade $http_upgrade;
           proxy_set_header Connection "Upgrade";
@@ -32,7 +32,7 @@ http {
         }
 
         location /api {
-            proxy_pass http://fastapi-app:8000;
+            proxy_pass http://backend:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
