--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,10 +22,11 @@ types-redis = "^4.6.0.20240218"
 flake8 = "^7.0.0"
 mypy = "^1.8.0"
 axblack = "^20220330"
-httpx = "^0.27.0"
 pytest = "^8.0.1"
 polyfactory = "^2.14.1"
-anyio = "^4.3.0"
+httpx = "^0.27.0"
+pytest-asyncio = "^0.23.6"
+pytest-env = "^1.1.3"
 
 [tool.black]
 line-length = 80
@@ -33,3 +34,10 @@ line-length = 80
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+filterwarnings = ["ignore::DeprecationWarning"]
+
+[tool.pytest_env]
+CI = "True"
+
